Removed red bg from avatar and fixed long text nav sections getting clipped

--- a/_sass/jekyll-theme-prologue.scss
+++ b/_sass/jekyll-theme-prologue.scss
@@ -248,7 +248,7 @@
 		&.avatar48 {
 			width: 48px;
 			height: 48px;
-			background: #f00;
+			background: #00000000; // Clear color
 
 			img {
 				width: 48px;
